# CustomOpenXRRuntime

./: CMakeLists.txt  README.md  customxr.json
Src/: DxgiUtils.h  Main.cpp
